--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
@@ -17,6 +18,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-loading": "^2.0.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
     "swiper": "^12.1.0",
